<resources>
    <string name="app_name">ModernNostalgiaV2</string>
    <string name="login_screen">User Login</string>
    <string name="registration_screen">User Registration</string>
    <string name="album_screen">Album</string>
    <string name="photo_screen">Gallery</string>
    <string name="camera_screen">Camera</string>
    <string name="settings_screen">Settings</string>
    <string name="mn_logo">MN_Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="modern_nostalgia_your_blast_to_the_past">Modern Nostalgia - your blast to the past!</string>
    <string name ="no_account"> No account? Register </string>
    <string name="already_account">Have an account? Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="main">Main Menu</string>
    <string name="album">Album</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="album_cover">Album Cover</string>
    <string name="TAG"> MESSAGE </string>
    <string name="album_message">Click on the album you want to access</string>
    <string name="album_add">Add</string>
    <string name="album_delete">Delete</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="application_settings">Application Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="camera_enabled">Camera Enabled</string>
    <string name="text_size">Text Size</string>
    <string name="application_information">Application Information</string>
    <string name="help">Help</string>
    <string name="text_icon">Text Icon</string>
    <string name="take_picture">Take Picture</string>
</resources>
